Remove specification of local/test docker container names

--- a/generators/app/templates/.env.ejs
+++ b/generators/app/templates/.env.ejs
@@ -9,14 +9,14 @@ TEST_DATABASE_URL="mysql://<%= databaseUser %>:<%= databaseUserPassword %>@local
 # STAGING_DATABASE_URL="mysql://userName:userPassword@ydr-1.cylekrh5qkss.us-east-1.rds.amazonaws.com:3306/ydr?connection_limit=0&pool_timeout=0&socket_timeout=5"
 # PROD_DATABASE_URL="mysql://userName:userPassword@ydr-1.cylekrh5qkss.us-east-1.rds.amazonaws.com:3306/ydr?connection_limit=0&pool_timeout=0&socket_timeout=5"
 
-LOCAL_MYSQL_CONTAINER_NAME='<%= databaseLocalContainerName %>'
+LOCAL_MYSQL_CONTAINER_NAME='<%= name %>_localdb'
 LOCAL_MYSQL_DATABASE='<%= databaseName %>'
 LOCAL_MYSQL_ROOT='root'
 LOCAL_MYSQL_ROOT_PASSWORD='password'
 LOCAL_MYSQL_USER='<%= databaseUser %>'
 LOCAL_MYSQL_USER_PASSWORD='<%= databaseUserPassword %>'
 
-TEST_MYSQL_CONTAINER_NAME='<%= databaseTestContainerName %>'
+TEST_MYSQL_CONTAINER_NAME='<%= name %>_testdb'
 TEST_MYSQL_DATABASE='<%= databaseName %>'
 TEST_MYSQL_ROOT='root'
 TEST_MYSQL_ROOT_PASSWORD='password'
