--- a/generators/app/templates/scripts/connect-to-mysql.sh.ejs
+++ b/generators/app/templates/scripts/connect-to-mysql.sh.ejs
@@ -4,7 +4,7 @@
 
 set -e
 
-DOCKER_CONTAINER="<%= databaseTestContainerName %>"
+DOCKER_CONTAINER="<%= name %>_testdb"
 MYSQL_HOST="0.0.0.0"
 MYSQL_DATABASE="<%= databaseName %>"
 MYSQL_USER="root"
