--- a/generators/app/templates/docker-compose.test.yml.ejs
+++ b/generators/app/templates/docker-compose.test.yml.ejs
@@ -1,7 +1,7 @@
 version: "3.9"
 services:
   testdb:
-    container_name: <%= databaseTestContainerName %>
+    container_name: <%= name %>_testdb
     image: mysql:5.7
     platform: linux/amd64
     environment:
