Specify database port during user input

--- a/generators/app/templates/.env.ejs
+++ b/generators/app/templates/.env.ejs
@@ -1,8 +1,8 @@
 # Only comment this in if you need to test `next build` locally
-DATABASE_URL="mysql://root:password@localhost:3306/<%= databaseName %>"
+DATABASE_URL="mysql://root:password@localhost:<%= databasePort %>/<%= databaseName %>"
 
-LOCAL_DATABASE_URL="mysql://<%= databaseUser %>:<%= databaseUserPassword %>@localhost:3306/<%= databaseName %>"
-TEST_DATABASE_URL="mysql://<%= databaseUser %>:<%= databaseUserPassword %>@localhost:3306/<%= databaseName %>?connection_limit=0&pool_timeout=0&socket_timeout=5"
+LOCAL_DATABASE_URL="mysql://<%= databaseUser %>:<%= databaseUserPassword %>@localhost:<%= databasePort %>/<%= databaseName %>"
+TEST_DATABASE_URL="mysql://<%= databaseUser %>:<%= databaseUserPassword %>@localhost:<%= databasePort %>/<%= databaseName %>?connection_limit=0&pool_timeout=0&socket_timeout=5"
 
 # These STAGING/PROD vars don't get called in the project code, but should be created in the Environment Variables of the AWS Amplify console.
 # They are simply listed here for example/reference of how those values could look.
