--- a/generators/app/templates/docker-compose.test.yml.ejs
+++ b/generators/app/templates/docker-compose.test.yml.ejs
@@ -11,4 +11,4 @@ services:
       MYSQL_USER: ${TEST_MYSQL_USER}
       MYSQL_PASSWORD: ${TEST_MYSQL_USER_PASSWORD}
     ports:
-      - 3306:3306
+      - <%= databasePort %>:3306
