--- a/generators/app/templates/app/globals.css
+++ b/generators/app/templates/app/globals.css
@@ -4,43 +4,43 @@
 
 /* fonts */
 @font-face {
-  font-family: 'Roboto';
-  src: url('../fonts/Roboto/Roboto-Regular.ttf');
+  font-family: "Roboto";
+  src: url("./fonts/Roboto/Roboto-Regular.ttf");
   font-weight: normal;
   font-style: normal;
 }
 
 @font-face {
-  font-family: 'Roboto';
-  src: url('../fonts/Roboto/Roboto-Bold.ttf');
+  font-family: "Roboto";
+  src: url("./fonts/Roboto/Roboto-Bold.ttf");
   font-weight: bold;
   font-style: normal;
 }
 
 @font-face {
-  font-family: 'Roboto';
-  src: url('../fonts/Roboto/Roboto-Italic.ttf');
+  font-family: "Roboto";
+  src: url("./fonts/Roboto/Roboto-Italic.ttf");
   font-weight: normal;
   font-style: italic;
 }
 
 @font-face {
-  font-family: 'Lora';
-  src: url('../fonts/Lora/Lora-Regular.ttf');
+  font-family: "Lora";
+  src: url("./fonts/Lora/Lora-Regular.ttf");
   font-weight: normal;
   font-style: normal;
 }
 
 @font-face {
-  font-family: 'Lora';
-  src: url('../fonts/Lora/Lora-Bold.ttf');
+  font-family: "Lora";
+  src: url("./fonts/Lora/Lora-Bold.ttf");
   font-weight: bold;
   font-style: normal;
 }
 
 @font-face {
-  font-family: 'Lora';
-  src: url('../fonts/Lora/Lora-Italic.ttf');
+  font-family: "Lora";
+  src: url("./fonts/Lora/Lora-Italic.ttf");
   font-weight: normal;
   font-style: italic;
 }
@@ -48,7 +48,7 @@
 html,
 body {
   height: 100%;
-  font-family: 'Roboto', sans-serif;
+  font-family: "Roboto", sans-serif;
   @apply text-gray-800;
 }
 
@@ -61,16 +61,16 @@ body {
 }
 
 h1 {
-  font-family: 'Lora', serif;
+  font-family: "Lora", serif;
   @apply mb-4 mt-4 text-2xl font-bold;
 }
 
 h2 {
-  font-family: 'Lora', serif;
+  font-family: "Lora", serif;
   @apply mb-2 mt-4 text-3xl font-bold;
 }
 
 h3 {
-  font-family: 'Lora', serif;
+  font-family: "Lora", serif;
   @apply mb-2 mt-4 text-2xl font-bold;
 }
